--- a/PL_GS_FINAL.ipynb
+++ b/PL_GS_FINAL.ipynb
@@ -2986,7 +2986,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Best R^2 score = 0.70393"
+    "### Best R^2 value = 0.70393"
    ]
   }
  ],
